structural-typing/tests/ui/serde_flatten_rejected.stderr
error: structural typing does not support #[serde(flatten)]
  --> tests/ui/serde_flatten_rejected.rs:13:5
   |
13 |     #[serde(flatten)]
   |     ^^^^^^^^^^^^^^^^^
