structural-typing/tests/ui/serde_flatten_rejected.rs
use serde::Deserialize;
use structural_typing::structural;

#[derive(Deserialize)]
struct Address {
    city: String,
}

#[structural]
#[derive(Deserialize)]
struct User {
    name: String,
    #[serde(flatten)]
    address: Address,
}

fn main() {}
